--- a/Latte1/Chats.storyboard
+++ b/Latte1/Chats.storyboard
@@ -30,36 +30,44 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="oad-Xx-Pw2">
-                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="itemSize" width="115" height="85"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="chatCell" reuseIdentifier="chatCell" id="UHv-lv-ze5" customClass="ChatMessageCell" customModule="Latte1" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="115" height="85"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="115" height="85"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nFc-lR-b2H">
-                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nFc-lR-b2H">
+                                                    <rect key="frame" x="0.0" y="0.0" width="115" height="85"/>
                                                     <string key="userLabel">class ChatMessageCell: UICollectionViewCell {
     @IBOutlet weak var textLabel: UILabel!
     @IBOutlet weak var containerView: UIView!
     </string>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aI6-Ld-Ox5">
-                                                    <rect key="frame" x="4" y="14" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aI6-Ld-Ox5">
+                                                    <rect key="frame" x="8" y="8" width="99" height="69"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </view>
+                                        <constraints>
+                                            <constraint firstItem="aI6-Ld-Ox5" firstAttribute="leading" secondItem="UHv-lv-ze5" secondAttribute="leading" constant="8" id="AJ3-cG-lCC"/>
+                                            <constraint firstItem="nFc-lR-b2H" firstAttribute="leading" secondItem="UHv-lv-ze5" secondAttribute="leading" id="M9l-Uq-zru"/>
+                                            <constraint firstAttribute="trailing" secondItem="nFc-lR-b2H" secondAttribute="trailing" id="ek3-VA-wB6"/>
+                                            <constraint firstAttribute="bottom" secondItem="nFc-lR-b2H" secondAttribute="bottom" id="g17-pA-wiz"/>
+                                            <constraint firstItem="nFc-lR-b2H" firstAttribute="top" secondItem="UHv-lv-ze5" secondAttribute="top" id="hZZ-1p-UGh"/>
+                                            <constraint firstAttribute="bottom" secondItem="aI6-Ld-Ox5" secondAttribute="bottom" constant="8" id="nLP-zJ-MXF"/>
+                                            <constraint firstItem="aI6-Ld-Ox5" firstAttribute="top" secondItem="UHv-lv-ze5" secondAttribute="top" constant="8" id="oFm-wZ-qRG"/>
+                                            <constraint firstAttribute="trailing" secondItem="aI6-Ld-Ox5" secondAttribute="trailing" constant="8" id="sxQ-X7-k57"/>
+                                        </constraints>
                                         <connections>
                                             <outlet property="messageImage" destination="nFc-lR-b2H" id="pUk-5m-X8t"/>
                                             <outlet property="textLabel" destination="aI6-Ld-Ox5" id="yEU-ZW-JHL"/>
@@ -114,7 +122,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CFI-ay-EVd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="34.782608695652179" y="-624.10714285714278"/>
+            <point key="canvasLocation" x="-32" y="-624"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="6RS-2B-G79">
@@ -129,7 +137,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3bj-2g-agp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="701" y="-599"/>
+            <point key="canvasLocation" x="907" y="-624"/>
         </scene>
     </scenes>
     <resources>
