--- a/Latte1/Base.lproj/Main.storyboard
+++ b/Latte1/Base.lproj/Main.storyboard
@@ -191,10 +191,10 @@
             </objects>
             <point key="canvasLocation" x="-1047.2" y="903.59820089955031"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Main View Controller-->
         <scene sceneID="6bv-hX-xC0">
             <objects>
-                <tabBarController id="fz3-ab-Iug" sceneMemberID="viewController">
+                <tabBarController id="fz3-ab-Iug" customClass="MainViewController" customModule="Latte1" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="KnN-Gn-hqt">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -291,12 +291,27 @@
                                     <action selector="backButton:" destination="T0H-2J-KwP" eventType="touchUpInside" id="aTN-NA-ZIO"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lbn-YE-J0j">
+                                <rect key="frame" x="138" y="277" width="141" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="이름" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OfG-8p-ANq">
+                                <rect key="frame" x="54" y="282" width="59" height="25"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="Kix-FE-acJ"/>
                     </view>
                     <connections>
                         <outlet property="emailField" destination="i1E-XD-RIC" id="4Ag-a5-MZz"/>
+                        <outlet property="nameField" destination="lbn-YE-J0j" id="MIF-HG-gdk"/>
                         <outlet property="passwordField" destination="niM-m4-x0t" id="sYs-3I-0at"/>
                         <segue destination="jJ4-u3-RCZ" kind="unwind" identifier="authTologin" unwindAction="unwind:" id="DaG-EA-9fm"/>
                         <segue destination="G0x-CH-AA6" kind="show" identifier="authToconfirm" id="fYf-de-rNm"/>
@@ -307,7 +322,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cxU-tH-vwm" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="jJ4-u3-RCZ" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-2054" y="753"/>
+            <point key="canvasLocation" x="-2055.1999999999998" y="752.47376311844084"/>
         </scene>
         <!--Loading View Controller-->
         <scene sceneID="KoP-xY-AWu">
@@ -421,7 +436,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="~님이 맞나요?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O0c-sw-dMw">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="~님이 맞나요?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O0c-sw-dMw">
                                 <rect key="frame" x="54" y="166" width="268" height="139"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
@@ -475,6 +490,6 @@
         <image name="like" width="21" height="21"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Zf6-fT-Grp"/>
+        <segue reference="fYf-de-rNm"/>
     </inferredMetricsTieBreakers>
 </document>
